// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h6
  class="sc-bdVaJa kXMqwJ"
>
  Heading
</h6>
`;

exports[`renders "Heading" with color prop 2`] = `
<h6
  class="sc-bdVaJa hbXzXO"
>
  Heading
</h6>
`;

exports[`renders "Heading" with l prop 1`] = `
<h6
  class="sc-bdVaJa euFXum"
>
  Heading
</h6>
`;

exports[`renders "Heading" with margin 1`] = `
<h6
  class="sc-bdVaJa ciHpsU"
>
  Heading
</h6>
`;

exports[`renders "Heading" with no props 1`] = `
<h6
  class="sc-bdVaJa cxTPHi"
>
  Heading
</h6>
`;

exports[`renders "Heading" with s prop 1`] = `
<h6
  class="sc-bdVaJa iHBoCd"
>
  Heading
</h6>
`;
